# explorer

./: .gitignore  AGENTS.md  README.md  action_frame.py  element_navigator.py  pyproject.toml  requirements.txt  scenario_explorer.py  viewnode.py
example/: run_explorer.py
explorer/: __init__.py  action_frame.py  element_navigator.py  models.py  scenario_explorer.py  scenario_parser.py  utils.py
explorer/prompts/: extract_step_by_step_scenario.md
prompts/: extract_step_by_step_scenario.md
tests/: conftest.py  test_element_navigator.py  test_models.py  test_scenario_explorer.py  test_scenario_parser.py  test_utils.py  test_viewnode.py
